[package]
name = "deftheim"
version = "2.0.0"
description = "Modern, performant mod manager for Valheim"
authors = ["deftorch"]
license = "MIT"
repository = "https://github.com/deftorch/deftheim"
edition = "2024"
rust-version = "1.85"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
hex = "0.4"
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
zip = "2.2"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
futures = "0.3"
async-trait = "0.1"
dirs = "6.0.0"
open = "5.3.3"
async-recursion = "1.1.1"
base64 = "0.22.1"
flate2 = "1.1.5"
uuid = { version = "1.10.0", features = ["v4"] }
ts-rs = { version = "10.1", features = ["chrono-impl", "uuid-impl"] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
